--- a/Desafio-jogo/index.html
+++ b/Desafio-jogo/index.html
@@ -6,22 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>Jogo de rato</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
     <div class="container">
-        <h1>Testando</h1>
-
-
-
         
+        <div id="tabuleiro">
+
+           
+
+        </div>
+   
     </div>
-
-
-
-
-
-
      <script src="script.js"></script>  
 </body>
 </html>
